# Echo

./: .dockerignore  .env.example  .gitignore  AGENTS.md  CLAUDE.md  Dockerfile  README.md  compose.dev.yaml  compose.yaml  constraints-gpu.txt  pyproject.toml
.agent-workflow/: manifest.json
.claude/: settings.json
.claude/agents/: code-implementer.md  solution-researcher.md  thorough-analyst.md
.claude/hooks/: docs-guard.sh  plan-reminder.sh  plan-state-guard.sh
.codex/: hooks.json
.codex/agents/: code-implementer.toml  planner.toml  solution-researcher.toml  thorough-analyst.toml
.codex/hooks/: plan-reminder.sh  plan-state-guard.sh  workflow-check.py
docs/: README.md
docs/00_specification/: README.md  pipeline_transkrypcji.md
docs/01_architecture/: README.md  pipeline_transkrypcji.md
docs/02_plans/: README.md
docs/03_reports/: 2026-07-11_pipeline_transkrypcji_analiza.md  2026-07-12_docker_dev_analiza.md  2026-07-18_alternatywy_asr_analiza.md  2026-07-18_audyt_pipeline_transkrypcji_i_diaryzacji.md  README.md
docs/04_guides/: README.md  benchmark_pipeline.md  serwer_gpu_popos.md
docs/05_worklog/: 001_12-07_pipeline-transkrypcji-poprawki.md  002_14-07_docker-dev-gpu-popos.md  README.md  (+4 more)
scripts/: benchmark_transcription.py  build_windows.bat  preflight_gpu.py
tests/: test_alignment.py  test_asr_result.py  test_benchmark_transcription.py  test_config_defaults.py  test_jobs.py  test_media_endpoint.py  test_pipeline_contracts.py  test_preflight_gpu.py  test_repository_migrations.py  test_speaker_assignment.py  test_transcription_prepare.py
(+36 files in other folders)
